add count of indexed, banned and reported rooms to the /-/status response; do not send duplicate reports about already reported rooms
