# model/stats.go
@@ -5,7 +5,7 @@ import "time"
 // IndexStats structure
 type IndexStats struct {
 	Servers   IndexStatsServers `json:"servers"`
-	Rooms     int               `json:"rooms"`
+	Rooms     IndexStatsRooms   `json:"rooms"`
 	Discovery IndexStatsTime    `json:"discovery"`
 	Parsing   IndexStatsTime    `json:"parsing"`
 	Indexing  IndexStatsTime    `json:"indexing"`
@@ -15,6 +15,13 @@ type IndexStats struct {
 type IndexStatsServers struct {
 	All    int `json:"all"`
 	Online int `json:"online"`
+}
+
+// IndexStatsRooms structure
+type IndexStatsRooms struct {
+	All      int `json:"all"`
+	Banned   int `json:"banned"`
+	Reported int `json:"reported"`
 }
 
 // IndexStatsTime structure
